--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,39 @@
 .navbar-brand {
     color: #000000;
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: 'Freight Sans', 'lucida grande',tahoma,verdana,arial,sans-serif
 }
 
+.dtitle {
+    color: #FFFFFF;
+    padding: 10% 30% 0 30%;
+    position: absolute;
+    
+}
 
+.mtitle {
+    color: #FFFFFF;
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    text-shadow: 2px 2px #888888;
+    font-size: 60px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
 
+.mtitle2 {
+    color: #FFFFFF;
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    background-color: rgba(0, 0, 0, 0.5);
+}
 
+.mtitle3 {
+    color: #FFFFFF;
+    font-family: Georgia, serif;
+    background-color: rgba(0, 0, 0, 0.5);
+}
 
-
-
-
-
-
-
-
-
-
+.mtitle3 >a, .mtitle3 >a:visited, .mtitle3 >a:hover, .mtitle3 >a:active {
+    text-decoration: none;
+    color: #FFFFFF;
+    font-family: Georgia, serif;
+    background-color: rgba(0, 0, 0, 0.5);
+}
 
