--- a/css/main.css
+++ b/css/main.css
@@ -37,3 +37,20 @@
     background-color: rgba(0, 0, 0, 0.5);
 }
 
+  .thumbnail.with-caption {
+    display: inline-block;
+    background: #f9f9f9;
+  }
+  .thumbnail.with-caption p {
+    margin: 0;
+    padding-top: 0.5em;
+  }
+  .thumbnail.with-caption small:before {
+    content: '\2014 \00A0';
+  }
+  .thumbnail.with-caption small {
+    width: 100%;
+    text-align: right;
+    display: inline-block;
+    color: #999;
+  }
